# talks

./: README.md
2016/PWLMTL/: abstract.md
2017/sparksummit/: README.md  deepdive.md  fastindexes.md
2018/: dagstuhl2018.md  dic2018.md  dic2018abstract.txt  megadata.md  nextgen.md  notes.txt  odsc2018bio.txt  odsceast2018.md  odsceast2018abstract.txt  sciencefacts.md  subventions.md  swiftcrash.gnuplot  swiftcrash.txt  waterloo2018.md
2019/: go10roaring.md  qcon2019.md  results.gnuplot  twitterjson.txt
2020/acm/: notes.txt
2020/allsystemsgo/: allsystemsgo.md  whygo.md
2020/perfsummit/: abstract.txt  perfsummit3.md
2020/vldb/: vldb.md
2021/datadog/: abstract.txt  datadog.md
2021/mit/: abstract.txt  mit.md
2021/spire/: abstract.txt  bio.txt  simdutf.md  spire.md  spire_notes.md
2022/evil/week1/: week1.md
2022/evil/week2/: door.py  hanoi.py  lehmer.py  parabolic.py  peg.py  week2.md  z3lehmer.py  z3table.py
2022/evil/week3/: duck.py  exif.py  imageserver.py  (+6 more)
2022/pierre/: shuffle.cpp  shuffle.md
2022/ulaval/: abstract.txt  ulaval.md
2023/fastfilters/: abstract.txt  fastfilter.md  results.txt  shortfastfilter.md
2023/performance/: abstract.txt  performance.md
2023/url/: barchart.numbers  euro.html  euro.md
2024/HarveyMuddCollege/: HarveyMuddCollege.md  abstract.txt
2024/ai/: ai.md  remainder.txt  research.md
2024/airesearch/: abstract.txt  airsearch.md
2025/sea/: sea2025.md
2025/sea/software/: CMakeLists.txt  README.md
2025/sea/software/benchmarks/: benchmark.cpp  curlbench.h  shufflebench.h
goodwriting/latex/: goodwriting.tex
(+39 files in other folders)
